# maxpluslib

./: .gitignore  .gitlab-ci.yml  .lang-tidy  CMakeLists.txt  Dockerfile  LICENSE  README.md  log.txt
documentation/: .gitignore  CMakeLists.txt  Doxyfile.doc
include/maxplus/algebra/: maxplus.h  mpmatrix.h  mpsparsematrix.h  mptype.h
include/maxplus/base/: base.h  basic_types.h
include/maxplus/base/analysis/mcm/: mcm.h  mcmdg.h  mcmgraph.h  mcmhoward.h  mcmyto.h
include/maxplus/base/exception/: exception.h
include/maxplus/base/fraction/: fraction.h
include/maxplus/base/fsm/: fsm.h
include/maxplus/base/lookup/: clookup.h
include/maxplus/base/math/: cmath.h
include/maxplus/base/string/: cstring.h
include/maxplus/game/: mpgameautomaton.h  policyiteration.h  ratiogame.h  strategyvector.h
include/maxplus/graph/: doubleweightedgraph.h  mpautomaton.h  mpstatespace.h
src/: CMakeLists.txt
src/algebra/: CMakeLists.txt  mpmatrix.cc  mpsparsematrix.cc
src/base/: CMakeLists.txt
src/base/analysis/: CMakeLists.txt
src/base/analysis/mcm/: CMakeLists.txt  mcm.cc  mcmdg.cc  mcmgraph.cc  mcmhoward.cc  mcmkarp.cc  mcmyto.cc
src/base/exception/: CMakeLists.txt  exception.cc
src/base/fsm/: CMakeLists.txt  fsm.cc
src/base/string/: CMakeLists.txt  cstring.cc
src/graph/: CMakeLists.txt  mpautomaton.cc
src/testbench/: CMakeLists.txt
src/testbench/algebra/: CMakeLists.txt  matrixtest.cc  matrixtest.h  sparsematrixtest.cc  sparsematrixtest.h  testing.cc  testing.h  valuetest.cc  valuetest.h  vectortest.cc  vectortest.h
src/testbench/base/: CMakeLists.txt  mcmtest.cc  mcmtest.h  testing.cc  testing.h
src/testbench/game/: CMakeLists.txt  policyiterationtest.cc  policyiterationtest.h  ratiogametest.cc  ratiogametest.h  strategyvectortest.cc  strategyvectortest.h  testing.cc  testing.h
src/testbench/graph/: CMakeLists.txt  matrixlabeledfsmtest.cc  matrixlabeledfsmtest.h  mpautomatontest.cc  mpautomatontest.h  testing.cc  testing.h
